test/tasty/pos/src-2/tastytest/TestDelayed.scala
package tastytest

object TestDelayed {
  def test: Delayed = ??? // error
}
